; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_618.c_listener.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/remote/extr_618.c_listener.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__, i32, i32 }
%struct.TYPE_3__ = type { i32 }
%struct.sockaddr = type { i32 }

@AF_INET = common dso_local global i32 0, align 4
@lar = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4
@PORT1 = common dso_local global i32 0, align 4
@INADDR_ANY = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"bind\00", align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"[x] Bind successfull.\0A\00", align 1
@BACKLOG = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [7 x i8] c"listen\00", align 1
@.str.3 = private unnamed_addr constant [27 x i8] c"[x] Listening on port %d.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @listener() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @AF_INET, align 4
  store i32 %2, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @lar, i32 0, i32 3), align 4
  %3 = load i32, i32* @PORT1, align 4
  %4 = call i32 @htons(i32 %3)
  store i32 %4, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @lar, i32 0, i32 2), align 4
  %5 = load i32, i32* @INADDR_ANY, align 4
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @lar, i32 0, i32 1, i32 0), align 4
  %6 = call i32 @bzero(i32* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @lar, i32 0, i32 0), i32 8)
  %7 = load i32, i32* @AF_INET, align 4
  %8 = load i32, i32* @SOCK_STREAM, align 4
  %9 = call i32 @socket(i32 %7, i32 %8, i32 0)
  store i32 %9, i32* %1, align 4
  %10 = load i32, i32* %1, align 4
  %11 = call i64 @bind(i32 %10, %struct.sockaddr* bitcast (%struct.TYPE_4__* @lar to %struct.sockaddr*), i32 4)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %16

13:                                               ; preds = %0
  %14 = call i32 @perror(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %15 = call i32 @exit(i32 0) #3
  unreachable

16:                                               ; preds = %0
  %17 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %18 = load i32, i32* %1, align 4
  %19 = load i32, i32* @BACKLOG, align 4
  %20 = call i64 @listen(i32 %18, i32 %19)
  %21 = icmp slt i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %16
  %23 = call i32 @perror(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0))
  %24 = call i32 @exit(i32 0) #3
  unreachable

25:                                               ; preds = %16
  %26 = load i32, i32* @PORT1, align 4
  %27 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.3, i64 0, i64 0), i32 %26)
  %28 = load i32, i32* %1, align 4
  ret i32 %28
}

declare dso_local i32 @htons(i32) #1

declare dso_local i32 @bzero(i32*, i32) #1

declare dso_local i32 @socket(i32, i32, i32) #1

declare dso_local i64 @bind(i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i64 @listen(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
